--- a/config/routes_website.yaml
+++ b/config/routes_website.yaml
@@ -11,13 +11,13 @@ controllers:
 # If you need registration or profile edit have a look at the:
 # https://github.com/sulu/SuluCommunityBundle
 #
-#login:
-#    path: /login
-#    controller:   Symfony\Bundle\FrameworkBundle\Controller\TemplateController
-#    defaults:
-#        # the following template need to be created:
-#        # see https://github.com/sulu/sulu/blob/2.x/templates/static/login.html.twig as example
-#        template: static/login.html.twig
-#
-#logout:
-#    path: /logout
+login:
+    path: /login
+    controller:   Symfony\Bundle\FrameworkBundle\Controller\TemplateController
+    defaults:
+        # the following template need to be created:
+        # see https://github.com/sulu/sulu/blob/2.x/templates/static/login.html.twig as example
+        template: static/login.html.twig
+
+logout:
+    path: /logout
