--- a/config/services.yaml
+++ b/config/services.yaml
@@ -16,7 +16,6 @@ services:
         #bind:
         #    'bool $isDebug': '%kernel.debug%'
 
-
     # makes classes in src/ available to be used as services
     # this creates a service per class whose id is the fully-qualified class name
     App\:
@@ -28,3 +27,6 @@ services:
 
     # add more service definitions when explicit configuration is needed
     # please note that last definitions always *replace* previous ones
+
+    # Add this as a service to help automate creation of /secure-area page
+    Sulu\Component\DocumentManager\DocumentManagerInterface: '@sulu_document_manager.document_manager'
